log/build_2024-12-05_19-14-00/follow/stderr.log
  File "/home/robot/human_ws/install/follow/lib/python3.10/site-packages/follow/head_client.py", line 63
    Thread1 = threading.Thread(target = client.random_action, args = )
                                                                     ^
SyntaxError: invalid syntax

